<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@android:color/transparent"
   android:orientation="vertical"
   tools:context=".BlockBackgroundActivity">

	<RelativeLayout
	    android:id="@+id/layout_root"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp" >

	    <!-- Title -->
	    <TextView
	        android:id="@+id/textViewTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title" 
	        android:textStyle="bold" 
	        android:textSize="24sp" 
	        android:typeface="sans" 
	        android:layout_marginBottom="15dp"/>
	    <!-- MUTE -->
	 	<ImageButton
	 	    android:id="@+id/btSilent"
	 	    android:layout_width="32dp"
	 	    android:layout_height="32dp"
	 	    android:layout_alignRight="@+id/textViewTitle"
	 	    android:layout_alignTop="@+id/textViewTitle"
	 	    android:contentDescription="@string/mute"
	 	    android:scaleType="fitCenter" />
	    
	    
	 	<LinearLayout
	        android:id="@+id/layoutCenter"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/textViewTitle"
	        android:orientation="vertical">
	        
	        <LinearLayout
	            android:id="@+id/layout0"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            
			    <ImageButton
			        android:id="@+id/btSettings"
			        android:layout_width="32dp"
			        android:layout_height="32dp"
			        android:contentDescription="@string/settings"
			        android:layout_marginBottom="15dp" />
	
	            <TextView
	                android:id="@+id/textViewSettings"
	                android:layout_width="match_parent"
	                android:layout_height="32dp"
	                android:gravity="center_vertical"
	                android:text="@string/settings" />

	        </LinearLayout>
	        
		   
	
	        <TextView
	            android:id="@+id/textViewAlarm"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_alarm" />
	
	        <LinearLayout
	            android:id="@+id/layoutAlarm"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewAlarm"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_alarm"
	                android:src="@drawable/alarms" />
	
	            <SeekBar
	                android:id="@+id/seekBarAlarm"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewDTMF"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_dtmf" />
	
	        <LinearLayout
	            android:id="@+id/layoutDTMF"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewDTMF"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_dtmf"
	                android:src="@drawable/dtmf" />
	
	            <SeekBar
	                android:id="@+id/seekBarDTMF"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewMusic"
	            android:layout_width="302dp"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_music" />
	
	        <LinearLayout
	            android:id="@+id/layoutMusic"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewMusic"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_music"
	                android:src="@drawable/music" />
	
	            <SeekBar
	                android:id="@+id/seekBarMusic"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewNotification"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_notification" />
	
	        <LinearLayout
	            android:id="@+id/layoutNotification"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewNotification"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_notification"
	                android:src="@drawable/notification" />
	
	            <SeekBar
	                android:id="@+id/seekBarNotification"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewRing"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_ring" />
	
	        <LinearLayout
	            android:id="@+id/layoutRing"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewRing"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_ring"
	                android:src="@drawable/ring" />
	
	            <SeekBar
	                android:id="@+id/seekBarRing"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewSystem"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_system" />
	
	        <LinearLayout
	            android:id="@+id/layoutSystem"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewSystem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_system"
	                android:src="@drawable/system" />
	
	            <SeekBar
	                android:id="@+id/seekBarSystem"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/textViewVoiceCall"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/stream_voice_call" />
	
	        <LinearLayout
	            android:id="@+id/layoutVoiceCall"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:id="@+id/imageViewVoiceCall"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/stream_voice_call"
	                android:src="@drawable/voice_call" />
	
	            <SeekBar
	                android:id="@+id/seekBarVoiceCall"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	        </LinearLayout>
	    </LinearLayout>

	</RelativeLayout>
</LinearLayout>